Added meetup.com link to Community tab

--- a/content/community.html
+++ b/content/community.html
@@ -15,6 +15,12 @@ title = "Community"
   </div>
 </div>
 
+<div class="panel panel-default community-notice-panel">
+  <div class="panel-body">
+    Please join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.
+  </div>
+</div>
+
 <h2>Ways to Contribute</h2>
 <ul>
   <li>Report or Fix Bugs</li>
