Made a quick text change for the community slack link

--- a/content/community.html
+++ b/content/community.html
@@ -23,7 +23,7 @@ title = "Community"
 
 <div class="panel panel-default community-notice-panel">
   <div class="panel-body">
-    Request to join the  <a href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true" target="_blank">NATS.io Slack community</a> to receive updates on upcoming meetups.
+    Request to join the  <a href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true" target="_blank">NATS.io Slack community</a>.
   </div>
 </div>
 
