Cleaned up some code for the partners page and added a gulp task for resizing them

--- a/content/partners.html
+++ b/content/partners.html
@@ -6,17 +6,19 @@ type = "partners"
 
 <div class="page-header">
   <h1>Featured Partners in the NATS Ecosystem<h1>
-    <br>
-    <br>
-    <a href ="https://www.cloudfoundry.org/"><img src="/partner_logos/cloud-foundry-logo.png">
-    <br>
-    <br>
-    <a href ="https://hub.docker.com/_/nats/"><img src="/partner_logos/docker logo.jpeg">
-    <br>
-    <br>
-    <a href ="http://www.ericsson.com"><img src="/partner_logos/ericsson logo1.png">
-    <br>
-    <br>
-    <a href = "http://connect.redhat.com/"><img src="/partner_logos/RH_technology_partner_logo_v1_1214clean_cmyk.png">
+</div>
 
+<div id="partners-con" class="row">
+  <div class="col-md-3">
+    <a target="_blank" href="https://www.cloudfoundry.org/"><img class="img-responsive" alt="Cloud Foundry" src="/img/partner_logos/cloud-foundry.png"></a>
+  </div>
+  <div class="col-md-3">
+    <a target="_blank" href="https://hub.docker.com/_/nats/"><img class="img-responsive" alt="Docker" src="/img/partner_logos/docker.jpeg"></a>
+  </div>
+  <div class="col-md-3">
+    <a target="_blank" href="http://www.ericsson.com"><img class="img-responsive" alt="Ericsson" src="/img/partner_logos/ericsson.png"></a>
+  </div>
+  <div class="col-md-3">
+    <a target="_blank" href="http://connect.redhat.com/"><img class="img-responsive" alt="redhat" src="/img/partner_logos/redhat.png"></a>
+  </div>
 </div>
