Updated social icons

--- a/content/community.html
+++ b/content/community.html
@@ -11,12 +11,12 @@ title = "Community"
 
 <div class="row">
 
-  <div class="col-md-4" id="social-con">
-    <h2>Social</h2>
-  </div>
-
   <div class="col-md-4" id="meetup-con">
     <h2>Events</h2>
+    <p>Join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.</p>
+    <div class="meetup-con">
+      <iframe width="225" height="400" src="http://meetu.ps/2R2whQ" frameborder="0"></iframe>
+    </div>
   </div>
 
   <div class="col-md-4" id="contribute-con">
@@ -28,8 +28,19 @@ title = "Community"
       <li>Update Client Libraries</li>
       <li><a href="mailto:info@nats.io">Host a Meetup</a></li>
       <li><a href="https://github.com/nats-io/" target="_blank">Improve this website</a></li>
+      <li>Join the <a href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true">NATS.io Slack group</a></li>
     </ul>
     <p>Please <a href="mailto:info@nats.io?subject=NATS suggestions">contact us</a> with any other suggestions.</p>
+  </div>
+
+  <div class="col-md-4" id="social-con">
+    <h2>Social</h2>
+    <ul class="social-list list-inline">
+      <li><a target="_blank" href="https://twitter.com/nats_io"><i class="fa fa-twitter"><span class="hidden">Twitter</span></i></a></li>
+      <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="fa fa-google-plus"><span class="hidden">Google Group</span></i></a></li>
+      <li><a target="_blank" href="https://github.com/nats-io"><i class="fa fa-github"><span class="hidden">Github</span></i></a></li>
+      <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><i class="fa fa-slack"><span class="hidden">Slack</span></i></a></li>
+    </ul>
   </div>
 
 </div>
@@ -37,7 +48,7 @@ title = "Community"
 <hr>
 
 <h3>Partners</h3>
-<div id="partners-con" class="row">
+<div class="partners-con" class="row">
   <div class="col-md-3">
     <a target="_blank" href="https://www.cloudfoundry.org/"><img class="img-responsive" alt="Cloud Foundry" src="/img/partner_logos/cloud-foundry.png"></a>
   </div>
@@ -49,26 +60,5 @@ title = "Community"
   </div>
   <div class="col-md-3">
     <a target="_blank" href="http://connect.redhat.com/"><img class="img-responsive" alt="redhat" src="/img/partner_logos/redhat.png"></a>
-  </div>
-</div>
-
-
-
-
-<div class="panel panel-default community-notice-panel">
-  <div class="panel-body">
-    Please visit our <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">NATS Google Group</a> to discuss ongoing NATS development and issues.
-  </div>
-</div>
-
-<div class="panel panel-default community-notice-panel">
-  <div class="panel-body">
-    Please join <a href="http://www.meetup.com/NATS-Cloud-Native-Meetup/" target="_blank">NATS Cloud Native Meetup.com Group</a> to receive updates on upcoming meetups.
-  </div>
-</div>
-
-<div class="panel panel-default community-notice-panel">
-  <div class="panel-body">
-    Request to join the  <a href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true" target="_blank">NATS.io Slack community</a>.
   </div>
 </div>
