Updated social media icons

--- a/content/community.html
+++ b/content/community.html
@@ -36,29 +36,11 @@ title = "Community"
   <div class="col-md-4" id="social-con">
     <h2>Social</h2>
     <ul class="social-list list-inline">
-      <li><a target="_blank" href="https://twitter.com/nats_io"><i class="fa fa-twitter"><span class="hidden">Twitter</span></i></a></li>
-      <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="fa fa-google-plus"><span class="hidden">Google Group</span></i></a></li>
-      <li><a target="_blank" href="https://github.com/nats-io"><i class="fa fa-github"><span class="hidden">Github</span></i></a></li>
-      <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><i class="fa fa-slack"><span class="hidden">Slack</span></i></a></li>
+      <li><a target="_blank" href="https://twitter.com/nats_io"><img alt="twitter" src="/img/social/twitter.png"/></a></li>
+      <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><img alt="Google Groups" src="/img/social/google.png"/></a></li>
+      <li><a target="_blank" href="https://github.com/nats-io"><img alt="github" src="/img/social/github.png"/></a></li>
+      <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><img alt="Slack" src="/img/social/slack.png"/></a></li>
     </ul>
   </div>
 
-</div>
-
-<hr>
-
-<h3>Partners</h3>
-<div class="partners-con" class="row">
-  <div class="col-md-3">
-    <a target="_blank" href="https://www.cloudfoundry.org/"><img class="img-responsive" alt="Cloud Foundry" src="/img/partner_logos/cloud-foundry.png"></a>
-  </div>
-  <div class="col-md-3">
-    <a target="_blank" href="https://hub.docker.com/_/nats/"><img class="img-responsive" alt="Docker" src="/img/partner_logos/docker.jpeg"></a>
-  </div>
-  <div class="col-md-3">
-    <a target="_blank" href="http://www.ericsson.com"><img class="img-responsive" alt="Ericsson" src="/img/partner_logos/ericsson.png"></a>
-  </div>
-  <div class="col-md-3">
-    <a target="_blank" href="http://connect.redhat.com/"><img class="img-responsive" alt="redhat" src="/img/partner_logos/redhat.png"></a>
-  </div>
 </div>
