First version of the new nats homepage

--- a/content/index.html
+++ b/content/index.html
@@ -4,10 +4,20 @@ title = "hh"
 type = "index"
 cssid = "home"
 +++
-
-<div class="page-header">
-  <h1>Cloud Native Infrastructure.</h1>
+<div class="background-con">
+  <div class="container">
+    <div class="row">
+      <div id="homepage-content" class="col-md-12">
+        <a class="homepage-brand" href="/about">
+          <img class="img-responsive" alt="Nats.io" src="/img/large-logo.png">
+        </a>
+        <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Performant.</span> <span class="nats-colour-blue-dark">Simple.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
+        <p class="lead">A central nervous system for modern, reliable,<br> and scalable cloud and distributed systems.</p>
+        <p class="extra-info">
+          <a class="nats-colour-blue-lite" href="http://twitter.com/nats_io"><i class="social-icon twitter-icon"></i> @nats_io</a>
+          <a class="nats-colour-green-lite" href="https://github.com/nats-io">https://github.com/nats-io</a>
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
-
-<h2>Open Source. Performant. Elegant. Scalable.</h2>
-<p class="lead">NATS acts as a central nervous system for distributed systems at scale, such as mobile devices, IoT networks, and cloud native infrastructure. Written in Go, NATS powers some of the largest cloud platforms in production today. Unlike traditional enterprise messaging systems, NATS has an always-on dial tone that does whatever it takes to remain available. NATS was created by Derek Collison, Founder/CEO of Apcera who has spent 20+ years designing, building, and using publish-subscribe messaging systems.</p>
