--- a/content/about.html
+++ b/content/about.html
@@ -6,8 +6,35 @@ type = "about"
 +++
 
 <div class="page-header">
-  <h1>Cloud Native Infrastructure.</h1>
+  <h1>About NATS</h1>
 </div>
 
-<h2>Open Source. Performant. Elegant. Scalable.</h2>
-<p class="lead">NATS acts as a central nervous system for distributed systems at scale, such as mobile devices, IoT networks, and cloud native infrastructure. Written in Go, NATS powers some of the largest cloud platforms in production today. Unlike traditional enterprise messaging systems, NATS has an always-on dial tone that does whatever it takes to remain available. NATS was created by Derek Collison, Founder/CEO of Apcera who has spent 20+ years designing, building, and using publish-subscribe messaging systems.</p>
+<div class="row">
+  <div class="col-md-6">
+    <p class="lead">NATS acts as a central nervous system for distributed systems such as mobile devices, IoT networks, enterprise microservices and cloud native infrastructure. Unlike traditional enterprise messaging systems, NATS provides an always on ‘dial-tone’.</p>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div id="canvas-con" class="col-md-12">
+    <h2 class="text-center">Brokered Throughput</h2>
+    <canvas id="throughputChart"></canvas>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/5GcAgMPECxE" allowfullscreen></iframe>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <p>NATS was created by Derek Collison, Founder and CEO at Apcera. Derek has spent over twenty years designing, building and using publish-subscribe messaging systems. Learn why traditional enterprise messaging systems don’t work for today’s distributed infrastructure, in this talk from Derek at SCALE on designing a new cloud-native messaging framework.</p>
+  </div>
+</div>
+
+<hr>
