--- a/content/community.html
+++ b/content/community.html
@@ -4,11 +4,18 @@ title = "Get involved in the NATS Cloud Native Community"
 cssid = "community"
 +++
 
-<div class="page-header">
-  <h1>We welcome your feedback and contributions to help make NATS better and faster!</h1>
+
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="page-header">
+      <h1>We welcome your feedback and contributions to help make NATS better and faster!</h1>
+    </div>
+    <p class="lead">If you’d like to help make NATS and its resources better, here are some ways. Chances are, if you find a feature useful, others will too. This website pulls documentation from GitHub so once you update the readme on GitHub, changes will show up <a href="http://nats.io/documentation">here</a> as well.</p>
+  </div>
 </div>
 
-<p class="lead">If you’d like to help make NATS and its resources better, here are some ways. Chances are, if you find a feature useful, others will too. This website pulls documentation from GitHub so once you update the readme on GitHub, changes will show up <a href="http://nats.io/documentation">here</a> as well.</p>
+<hr>
 
 <div class="row">
 
@@ -22,7 +29,7 @@ cssid = "community"
 
   <div class="col-md-4" id="contribute-con">
     <h2>Ways to Contribute</h2>
-    <ul>
+    <ul class="list-unstyled">
       <li>Report or Fix Bugs</li>
       <li>Add New Features</li>
       <li><a href="https://github.com/nats-io/nats-docs" target="_blank">Improve Documentation</a></li>
