Polishing the new release some more

--- a/content/about.html
+++ b/content/about.html
@@ -5,12 +5,11 @@ cssid = "about"
 type = "about"
 +++
 
-<div class="page-header">
-  <h1>About NATS</h1>
-</div>
-
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-7">
+    <div class="page-header">
+      <h1>About NATS</h1>
+    </div>
     <p class="lead">NATS acts as a central nervous system for distributed systems such as mobile devices, IoT networks, enterprise microservices and cloud native infrastructure. Unlike traditional enterprise messaging systems, NATS provides an always on ‘dial-tone’.</p>
   </div>
 </div>
@@ -18,7 +17,7 @@ type = "about"
 <hr>
 
 <div class="row">
-  <div id="canvas-con" class="col-md-12">
+  <div id="canvas-con" class="col-md-8 col-md-offset-2">
     <h2 class="text-center">Brokered Throughput</h2>
     <canvas id="throughputChart"></canvas>
   </div>
