--- a/content/support.html
+++ b/content/support.html
@@ -4,13 +4,12 @@ title = "Support for NATS High Performance Messaging"
 cssid = "support"
 +++
 
-<div class="page-header">
-  <h1>Technical Support for NATS and Clients</h1>
-</div>
-
-<div class="panel panel-default community-notice-panel">
-  <div class="panel-body">
-    To discuss NATS and post issues, please visit the <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">NATS Google Group</a>.
+<div class="row">
+  <div class="col-md-8">
+    <div class="page-header">
+      <h1>Technical Support for NATS and Clients</h1>
+      <p class="lead">To discuss NATS and post issues, please visit the <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">NATS Google Group</a>.</p>
+    </div>
   </div>
 </div>
 
