--- a/content/download.html
+++ b/content/download.html
@@ -5,6 +5,10 @@ type = "download"
 cssid = "download"
 +++
 
-<div class="page-header">
-  <h1>Download</h1>
+<div class="row">
+  <div class="col-md-7">
+    <div class="page-header">
+      <h1>Download</h1>
+    </div>
+  </div>
 </div>
