Reworked gulp some for a fix in gifs being resized as well as reformated the community page

--- a/content/about.html
+++ b/content/about.html
@@ -20,6 +20,7 @@ type = "about"
   <div id="canvas-con" class="col-md-8 col-md-offset-2">
     <h2 class="text-center">Brokered Throughput</h2>
     <canvas id="throughputChart"></canvas>
+    <sub>(Chart source: <a href="http://www.bravenewgeek.com/dissecting-message-queues/" target="_blank">bravenewgeek.com/dissecting-message-queues</a>)</sub>
   </div>
 </div>
 
