--- a/content/community.html
+++ b/content/community.html
@@ -122,7 +122,7 @@ type = "community"
       <td>Dashboard for monitoring NATS. It provides real-time information from NATS server.</td>
     </tr>
     <tr>
-      <td><a href="https://github.com/nvisibleinc/go-ari-proxy" target="_blank">Nvisibile Inc Go ARI Proxy</a></td>
+      <td><a href="https://github.com/nvisibleinc/go-ari-proxy" target="_blank">Nvisible Inc Go ARI Proxy</a></td>
       <td>An implementation of the [go-ari-library] used to connect to the Asterisk REST Interface for delivery of Events and Commands across a message bus.</td>
     </tr>
     <tr>
