Udpating headers on pages

--- a/content/about.html
+++ b/content/about.html
@@ -10,6 +10,11 @@ type = "about"
     <div class="page-header">
       <h1>About NATS</h1>
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
     <p class="lead">NATS acts as a central nervous system for distributed systems such as mobile devices, IoT networks, enterprise microservices and cloud native infrastructure. Unlike traditional enterprise messaging systems, NATS provides an always on ‘dial-tone’.</p>
   </div>
 </div>
@@ -18,7 +23,7 @@ type = "about"
 
 <div class="row">
   <div id="canvas-con" class="col-md-8 col-md-offset-2">
-    <h2 class="text-center">Brokered Throughput</h2>
+    <h4 class="text-center">Brokered Throughput</h4>
     <canvas id="throughputChart"></canvas>
     <sub>(Chart source: <a href="http://www.bravenewgeek.com/dissecting-message-queues/" target="_blank">bravenewgeek.com/dissecting-message-queues</a>)</sub>
   </div>
