--- a/content/community.html
+++ b/content/community.html
@@ -8,8 +8,13 @@ type = "community"
 <div class="row">
   <div class="col-md-7">
     <div class="page-header">
-      <h1>We welcome your feedback and contributions to help make NATS better and faster!</h1>
+      <h1>Community</h1>
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
     <p class="lead">If you’d like to help make NATS and its resources better, here are some ways. Chances are, if you find a feature useful, others will too. This website pulls documentation from GitHub so once you update the readme on GitHub, changes will show up <a href="http://nats.io/documentation">here</a> as well.</p>
   </div>
 </div>
@@ -55,7 +60,7 @@ type = "community"
 <hr>
 
 <h2>People Using NATS</h2>
-<p class="lead">Below are some example of projects and products in the ecosystem using NATS - if you would like to submit something to this list, please fork this site, and submit a pull request, or contact <a href="mailto:info@nats.io">info@nats.io</a> </p>
+<p>Below are some example of projects and products in the ecosystem using NATS - if you would like to submit something to this list, please fork this site, and submit a pull request, or contact <a href="mailto:info@nats.io">info@nats.io</a> </p>
 
 <table class="table table-striped">
   <thead>
