--- a/content/support.html
+++ b/content/support.html
@@ -7,9 +7,15 @@ cssid = "support"
 <div class="row">
   <div class="col-md-8">
     <div class="page-header">
-      <h1>Technical Support for NATS and Clients</h1>
-      <p class="lead">To discuss NATS and post issues, please visit the <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">NATS Google Group</a>.</p>
+      <h1>Support</h1>
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <h2>Technical Support for NATS and Clients</h2>
+    <p class="lead">To discuss NATS and post issues, please visit the <a href="https://groups.google.com/forum/#!forum/natsio" target="_blank">NATS Google Group</a>.</p>
   </div>
 </div>
 
