html file changes to add in bottom content on homepage

--- a/content/index.html
+++ b/content/index.html
@@ -17,6 +17,28 @@ cssid = "home"
           <a class="nats-colour-blue-lite" href="http://twitter.com/nats_io"><i class="social-icon twitter-icon"></i> @nats_io</a>
           <a class="nats-colour-green-lite" href="https://github.com/nats-io">https://github.com/nats-io</a>
         </p>
+        <div id="github-buttons">
+          <!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/nats-io/nats/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download ntkme/github-buttons on GitHub">Download</a>
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-eye" data-style="mega" data-count-href="/ntkme/github-buttons/watchers" data-count-api="/repos/ntkme/github-buttons#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a>
+
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-star" data-style="mega" data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/ntkme/github-buttons#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+
+
+<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/ntkme/github-buttons/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/ntkme/github-buttons/network" data-count-api="/repos/ntkme/github-buttons#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ntkme/github-buttons on GitHub">Fork</a>
+
+<!-- Place this tag right after the last button or just before your close body tag. -->
+<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+
+        </div>
+        <p class="bottom-info">
+          NATS, is an open source, modern, secure, messaging system for distributed systems and scalable cloud applications, utilized for cloud native applications, IoT device messaging, and microservices architectures.<br><br>
+          The Apcera team maintains The NATS server which is written in Go, Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C# clients. The community has contributed a growing list of libraries, including Rust, Lua, PHP and many more. 
+        </p>
+
       </div>
     </div>
   </div>
