--- a/content/index.html
+++ b/content/index.html
@@ -19,27 +19,179 @@ cssid = "home"
         </p>
         <div id="github-buttons">
           <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/nats-io/nats/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download ntkme/github-buttons on GitHub">Download</a>
-<!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-eye" data-style="mega" data-count-href="/ntkme/github-buttons/watchers" data-count-api="/repos/ntkme/github-buttons#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a>
+          <a class="github-button" href="https://github.com/nats-io/nats/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download ntkme/github-buttons on GitHub">Download</a>
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-eye" data-style="mega" data-count-href="/ntkme/github-buttons/watchers" data-count-api="/repos/ntkme/github-buttons#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a>
 
-<!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-star" data-style="mega" data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/ntkme/github-buttons#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-star" data-style="mega" data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/ntkme/github-buttons#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
 
 
-<!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/ntkme/github-buttons/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/ntkme/github-buttons/network" data-count-api="/repos/ntkme/github-buttons#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ntkme/github-buttons on GitHub">Fork</a>
+          <!-- Place this tag where you want the button to render. -->
+          <a class="github-button" href="https://github.com/ntkme/github-buttons/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/ntkme/github-buttons/network" data-count-api="/repos/ntkme/github-buttons#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ntkme/github-buttons on GitHub">Fork</a>
 
-<!-- Place this tag right after the last button or just before your close body tag. -->
-<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+          <!-- Place this tag right after the last button or just before your close body tag. -->
+          <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 
         </div>
         <p class="bottom-info">
           NATS, is an open source, modern, secure, messaging system for distributed systems and scalable cloud applications, utilized for cloud native applications, IoT device messaging, and microservices architectures.<br><br>
           The Apcera team maintains The NATS server which is written in Go, Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C# clients. The community has contributed a growing list of libraries, including Rust, Lua, PHP and many more. 
         </p>
+        <div class="bottom-logo-container">
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 505.8 109.6" style="enable-background:new 0 0 505.8 109.6;" xml:space="preserve" class="ericsson">
+            <g>
+              <g>
+                <path class="st0" d="M432,44.9c-4.9,1.8-10.4-0.7-12.2-5.7c-1.8-4.9,0.7-10.4,5.7-12.2l52.7-19.3c4.9-1.8,10.4,0.7,12.2,5.7
+                c1.8,4.9-0.7,10.4-5.7,12.2L432,44.9z"/>
+                <path class="st0" d="M432,73.4c-4.9,1.8-10.4-0.7-12.2-5.7c-1.8-4.9,0.7-10.4,5.7-12.2l52.7-19.3c4.9-1.8,10.4,0.7,12.2,5.7
+                c1.8,4.9-0.7,10.4-5.7,12.2L432,73.4z"/>
+                <path class="st0" d="M432,102c-4.9,1.8-10.4-0.7-12.2-5.7c-1.8-4.9,0.7-10.4,5.7-12.2l52.7-19.3c4.9-1.8,10.4,0.7,12.2,5.7
+                c1.8,4.9-0.7,10.4-5.7,12.2L432,102z"/>
+              </g>
+              <g>
+                <g>
+                  <polygon class="st0" points="14.9,36.6 53.5,36.6 53.5,47 28.5,47 28.5,56.2 52.4,56.2 52.4,67 28.5,67 28.5,76.4 53.9,76.4 
+                  53.9,87 14.9,87 14.9,36.6       "/>
+                </g>
+                <g>
+                  <polygon class="st0" points="113.4,36.6 127.1,36.6 127.1,87 113.4,87 113.4,36.6       "/>
+                </g>
+                <g>
+                  <path class="st0" d="M177.2,38.2L176.3,49c-11.1-6.4-28.1-4.4-28.4,12.5c-0.3,16.8,17.5,19.3,28.8,13.6l0.7,11
+                  c-19.9,6.2-43.8-0.1-43.6-24.6C133.8,37.5,157.8,30.8,177.2,38.2L177.2,38.2z"/>
+                </g>
+                <g>
+                  <path class="st0" d="M217.6,37.4l-0.9,10.5c-6.9-3.8-20-3.9-20,2.1c0,8.9,23.4,2.5,23.4,21.4c0,18.7-22.3,18.9-36.7,14.5l1-11.1
+                  c9.1,4.2,21.9,5.1,21.9-2.2c0-8-23.5-3.5-23.5-21.5C182.7,36.3,201,32.4,217.6,37.4L217.6,37.4z"/>
+                </g>
+                <g>
+                  <path class="st0" d="M259,37.4l-0.9,10.5c-6.9-3.8-20-3.9-20,2.1c0,8.9,23.4,2.5,23.4,21.4c0,18.7-22.3,18.9-36.7,14.5l1-11.1
+                  c9.1,4.2,21.9,5.1,21.9-2.2c0-8-23.5-3.5-23.5-21.5C224.1,36.3,242.4,32.4,259,37.4L259,37.4z"/>
+                </g>
+                <g>
+                  <polygon class="st0" points="322.2,36.6 339.6,36.6 356.1,69.1 356.1,36.6 368.8,36.6 368.8,87 352.4,87 334.9,53.9 334.9,87 
+                  322.2,87 322.2,36.6       "/>
+                </g>
+                <g>
+                  <path class="st0" d="M290.5,35.3c14.3,0,25.1,8.4,25.1,26.6c0,17.4-10.9,26.4-25.1,26.4c-14.2,0-25-8.7-25-26.4
+                  C265.5,43.7,276.3,35.3,290.5,35.3L290.5,35.3z M279.5,61.9c0,7.7,3.3,16.4,11,16.4c7.7,0,10.9-8.7,11-16.4
+                  c0.1-7-3.3-16.4-11-16.4C282.8,45.5,279.5,54.2,279.5,61.9L279.5,61.9z"/>
+                </g>
+                <g>
+                  <path class="st0" d="M76.6,57.8h7.5c3.4,0.1,6.4-2,6.4-5.7c0-3.3-2.7-5.6-6.2-5.6h-7.7V57.8L76.6,57.8z M63.4,36.6h24.7
+                  c6.7,0,16.1,2.9,16.1,13.4c0,6.7-3,10.5-8.8,12.2c0.3,0,3.3,1.3,4.6,5.1c0,0.1,7.1,19.7,7.2,19.7H92.5l-5.2-15.2
+                  c-0.8-2.3-2.5-3.9-5-3.9c-2.1,0-5.5-0.1-5.5,0v19H63.4V36.6L63.4,36.6z"/>
+                </g>
+              </g>
+            </g>
+          </svg>
+          <svg version="1.1"
+            id="svg2" inkscape:version="0.48.2 r9819" sodipodi:docname="HTC.svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 246.2 81.7"
+            style="enable-background:new 0 0 246.2 81.7;" xml:space="preserve" class="htc">
+            <path id="path38" inkscape:connector-curvature="0" class="st0" d="M225.7,69.1c-13,0.1-25.4,0.2-28.8-0.1
+            c-7-0.6-11.6-5.2-12.2-11.9c-0.4-4.4-0.4-8,0-11.5c0.6-6.5,6.1-12.7,12.2-13c2.2-0.1,8-0.1,18.6-0.1l30.7,0.1V19.8
+            c0,0-24.5,0-31.8-0.1c-9.9,0-14.8-0.1-18,0.1c-6.9,0.3-12.7,2.7-17.2,7.3c-4.3,4.3-6.8,11.2-7.2,18.2c-0.2,3.8-0.3,8.7,0,11.6
+            c0.7,7.5,3.1,13.4,7.2,17.5c4.3,4.4,11,7.2,17.2,7.3c5.2,0.1,49.8,0,49.8,0V69C246.2,69,232.7,69,225.7,69.1"/>
+            <path id="path40" inkscape:connector-curvature="0" class="st0" d="M87.1,20.5v12.7h30.3v48.2h12.8V33.2h30.3V20.5
+            C160.5,20.5,87.1,20.5,87.1,20.5z"/>
+            <path id="path50" inkscape:connector-curvature="0" class="st0" d="M73.8,44.6c-0.1-6.9-2.5-12.7-7.2-17.5c-4.9-5-12.4-7-17.2-7.3
+            c-4.2-0.2-21-0.2-24.9,0c-5.5,0.2-9.6,1.9-11.6,3.4c0,0,0,0,0,0l0-23.2H0v81.7h12.8c0,0-0.3-33.4,0-37.1c0.5-6.5,5.4-11.6,11.7-12.1
+            c5-0.4,20.1-0.3,24.8,0C55.8,33,60.6,38,61,44.9c0.1,2.5,0,36.8,0,36.8h12.8C73.8,81.7,73.8,47.5,73.8,44.6"/>
+          </svg>
+          <svg version="1.1"
+            id="Layer_1" xmlns:svg="http://www.w3.org/2000/svg"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 231 79"
+            style="enable-background:new 0 0 231 79;" xml:space="preserve" class="baidu">
+            <path id="path2227" class="st0" d="M97.3,29.4c-0.4-3.1-4.1-8.6-9-8.2C82,21.8,81,30.8,81,30.8c-0.8,4.2,2,13.2,9.8,11.5
+            C98.5,40.7,97.5,31.4,97.3,29.4z M105.2,4.8c-4.3,0-7.7,4.9-7.7,11c0,6.1,3.5,11,7.7,11c4.3,0,7.7-4.9,7.7-11
+            C112.9,9.7,109.5,4.8,105.2,4.8z M126.8,6.6c-4.1-0.9-9.1,5.6-9.6,9.8c-0.6,5.2,0.7,10.4,6.5,11.1c5.7,0.8,9.4-5.4,10.1-10
+            C134.5,12.9,130.8,7.5,126.8,6.6z M146.3,35.3c0-2.2-1.8-8.9-8.7-8.9c-6.8,0-7.8,6.3-7.8,10.8c0,4.2,0.4,10.2,8.9,10
+            C147.2,47,146.3,37.5,146.3,35.3z M102.1,55.7c-2,0.6-2.9,2.1-3.1,2.8c-0.2,0.7-0.7,2.3-0.3,3.8c0.9,3.2,3.7,3.4,3.7,3.4h4.1v-9.9
+            H102.1z M102.1,55.7c-2,0.6-2.9,2.1-3.1,2.8c-0.2,0.7-0.7,2.3-0.3,3.8c0.9,3.2,3.7,3.4,3.7,3.4h4.1v-9.9H102.1z M137.7,54.7
+            c0,0-8.9-6.8-14-14.3c-7-10.9-17-6.5-20.3-0.9c-3.3,5.5-8.5,9.1-9.2,10c-0.7,0.9-10.7,6.3-8.5,16.1c2.2,9.8,10,9.6,10,9.6
+            s5.7,0.6,12.4-0.9c6.6-1.5,12.4,0.4,12.4,0.4s15.5,5.2,19.7-4.8S137.7,54.7,137.7,54.7z M111.1,69.6H101c-4.3-0.9-6.1-3.8-6.3-4.4
+            s-1.5-2.9-0.8-7c1.9-6.1,7.2-6.5,7.2-6.5h5.4v-6.6l4.6,0.1V69.6z M129.9,69.5h-11.6c-4.5-1.2-4.7-4.4-4.7-4.4V52.4l4.7-0.1v11.5
+            c0.3,1.2,1.8,1.5,1.8,1.5h4.8V52.4h5V69.5z M99,58.4c-0.2,0.7-0.7,2.3-0.3,3.8c0.9,3.2,3.7,3.4,3.7,3.4h4.1v-9.9h-4.3
+            C100.2,56.3,99.2,57.8,99,58.4z"/>
+            <path id="path2233" class="st0" d="M185.1,43.9v-5.4h-35.6l0,5.5h15.3l-1.4,3.3h-13v27.1h30.9c3.2,0,2.9-3.3,2.9-3.3V47.3h-13
+            l1.1-3.4L185.1,43.9L185.1,43.9L185.1,43.9z M178.2,68.6c0,0-0.4,0.9-0.9,0.9h-20.5v-6.3h21.4L178.2,68.6L178.2,68.6z M178.2,58
+            h-21.4V52h21.4V58L178.2,58z"/>
+            <path id="path2235" class="st0" d="M225.8,38.7h-14v-2.7h-6.6v2.6h-16v35.8h5.8V43.2h30.8V38.7z M222.1,46.1V44h-5.6v2.1h-11.6v-2
+            h-5.3v2h-3.6l0.1,4.1h3.5v7.6H219c2.7,0,3.1-2.9,3.1-2.9v-4.8h4.1v-4.1L222.1,46.1L222.1,46.1L222.1,46.1z M216.4,52.9
+            c0,0-0.5,0.9-1.1,0.9h-10.5v-3.8h11.6L216.4,52.9L216.4,52.9L216.4,52.9L216.4,52.9z M196.7,63.3l9,5.2c-0.7,0.8-3.8,1.8-3.8,1.8h-6
+            v4h8.1c2.4-0.5,6.9-2.8,6.9-2.8c1.9,1.7,5.4,2.4,5.4,2.4h9.3v-4h-7c-1.9-0.3-3.6-1.4-3.6-1.4l10.6-6.1v-3.3h-28.9L196.7,63.3
+            L196.7,63.3L196.7,63.3z M215.3,63.3l-5.1,2.7l-4.7-2.7H215.3z"/>
+            <path id="path2237" class="st0" d="M70.3,44.4h7.8v-6.8h-7.8V44.4z M70.3,74.2h7.8V47.4h-7.8V74.2z"/>
+            <path id="path2239" class="st0" d="M57.6,47.4l-16.6,0V53h14.5c0,0,3.5,0.9,3.5,3v2H45.9c0,0-5.2,0.5-6.8,6.7
+            c-0.3,2.9,0.1,4.3,0.3,4.8c0.2,0.5,1.7,3.9,6.2,4.8h21V55.1C66.5,55.1,65.5,48.5,57.6,47.4L57.6,47.4z M59.1,69H48.5
+            c-1.4-0.6-1.9-1.5-2-1.8c-0.1-0.2-0.4-1.1,0-1.9c0.9-1.7,2.3-2,2.3-2h10.4V69z"/>
+            <path id="path2241" class="st0" d="M37.4,64.8c0.2-6.5-5.6-8.8-5.6-8.8c5-2.6,4.3-9.1,4.3-9.1c-0.5-10-12.8-9.6-12.8-9.6H4.4v37.3
+            h21.4C38.3,74.6,37.4,64.8,37.4,64.8L37.4,64.8z M25.3,67.7L25.3,67.7l-12.8,0v-8.1h12.7l0.4,0.1c0,0,2.4,0.4,3.3,2.6
+            c0,0,0.5,2-0.6,3.6C28.4,65.9,27.6,67.4,25.3,67.7L25.3,67.7z M28,50.4c0,0-0.9,1.6-3.1,1.9H12.5v-7.7h12.3c0,0,2.7-0.1,3.6,2
+            C28.4,46.6,28.9,48.8,28,50.4L28,50.4z"/>
+          </svg>
 
-      </div>
-    </div>
-  </div>
+          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          viewBox="0 0 595.3 141.7" style="enable-background:new 0 0 595.3 141.7;" xml:space="preserve" class="siemens">
+          <g id="Ebene_x0020_1">
+            <path class="st0" d="M567.3,29.3v16.5c-8.6-3.2-16.2-4.9-22.9-4.9c-4,0-7.1,0.7-9.5,2.1c-2.4,1.4-3.6,3.2-3.6,5.3
+            c0,2.8,2.7,5.2,8,7.4l15.5,7.6c12.6,6,18.8,13.9,18.8,23.9c0,8.3-3.3,14.9-10,19.8c-6.6,5-15.5,7.4-26.6,7.4
+            c-5.1,0-9.7-0.2-13.8-0.7c-4.1-0.4-8.8-1.3-14-2.6V93.9c9.5,3.2,18.2,4.9,26.1,4.9c9.3,0,14-2.7,14-8.2c0-2.7-1.9-4.9-5.8-6.6
+            l-17.3-7.4c-6.4-2.9-11.1-6.4-14.2-10.5c-3-4.2-4.6-9-4.6-14.4c0-7.6,3.2-13.8,9.6-18.5c6.4-4.6,14.9-7,25.5-7
+            c3.4,0,7.4,0.3,11.8,0.9C558.9,27.7,563.2,28.4,567.3,29.3L567.3,29.3z"/>
+            <path class="st0" d="M78.6,29.3v16.5C70,42.6,62.4,41,55.7,41c-4,0-7.1,0.7-9.5,2.1c-2.4,1.4-3.6,3.2-3.6,5.3
+            c0,2.8,2.7,5.2,8.1,7.4l15.5,7.6c12.5,6,18.8,13.9,18.8,23.9c0,8.3-3.3,14.9-9.9,19.8c-6.7,5-15.5,7.4-26.7,7.4
+            c-5.1,0-9.7-0.2-13.8-0.7c-4.1-0.4-8.7-1.3-14-2.6V93.9c9.6,3.2,18.3,4.9,26.1,4.9c9.3,0,14-2.7,14-8.2c0-2.7-1.9-4.9-5.7-6.6
+            l-17.3-7.4c-6.4-2.9-11.1-6.4-14.2-10.5c-3.1-4.2-4.6-9-4.6-14.4c0-7.6,3.2-13.8,9.6-18.5c6.4-4.6,14.9-7,25.5-7
+            c3.5,0,7.4,0.3,11.8,0.9C70.2,27.7,74.5,28.4,78.6,29.3z"/>
+            <polygon class="st0" points="96.4,27.8 121.7,27.8 121.7,113 96.4,113  "/>
+            <polygon class="st0" points="203.2,27.8 203.2,43.5 165.6,43.5 165.6,62.4 198.2,62.4 198.2,76.6 165.6,76.6 165.6,96.4 204,96.4 
+            204,113 141.3,113 141.3,27.8  "/>
+            <polygon class="st0" points="321.3,27.8 321.3,113 297.7,113 297.7,56.8 273.2,113.7 258.6,113.7 235,56.8 235,113 218,113 
+            218,27.8 248.8,27.8 269.9,79.9 292,27.8   "/>
+            <polygon class="st0" points="402.8,27.8 402.8,43.5 365.4,43.5 365.4,62.4 398,62.4 398,76.6 365.4,76.6 365.4,96.4 403.6,96.4 
+            403.6,113 340.9,113 340.9,27.8  "/>
+            <polygon class="st0" points="491.6,27.8 491.6,113 464.8,113 434.6,58.3 434.6,113 417.6,113 417.6,27.8 445.2,27.8 474.5,81.5 
+            474.5,27.8  "/>
+            </g>
+          </svg>
+          <svg version="1.1"
+            id="svg2" xmlns:svg="http://www.w3.org/2000/svg"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 190.2 31"
+            style="enable-background:new 0 0 190.2 31;" xml:space="preserve" class="vmware">
+            <path id="path174" class="st0" d="M82.4,27.5L74.2,4.6C74.1,4.3,74,3.9,74,3.5c0-1,0.8-1.9,2-1.9c1,0,1.7,0.7,2,1.7l6.8,19.7
+            l6.9-19.8c0.3-0.9,0.9-1.6,2-1.6h0.2c1.1,0,1.8,0.7,2.1,1.6l6.8,19.8l6.9-19.8c0.3-0.8,0.8-1.6,1.9-1.6c1.2,0,2,0.9,2,1.9
+            c0,0.4-0.2,0.8-0.3,1.1l-8.3,22.9c-0.4,1.2-1.3,1.8-2.2,1.8h-0.2c-1,0-1.8-0.6-2.2-1.8L93.8,8L87,27.5c-0.4,1.2-1.2,1.8-2.2,1.8
+            h-0.1C83.7,29.3,82.9,28.7,82.4,27.5"/>
+            <path id="path178" class="st0" d="M142.3,3.5c0-1.1,0.9-2,2-2c1.2,0,2,0.9,2,2v4.6c2-4.5,6.4-6.6,9.3-6.6c1.2,0,2,0.9,2,2
+            c0,1.1-0.7,1.9-1.8,2c-5.2,0.6-9.5,4.6-9.5,12.4v9.2c0,1.1-0.8,2-2,2c-1.2,0-2-0.9-2-2L142.3,3.5L142.3,3.5z"/>
+            <path id="path182" class="st0" d="M170.6,29.5c-7.3,0-13.3-5.7-13.3-14v-0.1c0-7.7,5.4-14,12.7-14c7.9,0,12.3,6.5,12.3,13.6
+            c0,1.1-0.9,1.9-1.9,1.9h-19.2c0.6,5.8,4.6,9.1,9.3,9.1c3.3,0,5.7-1.3,7.6-3.1c0.3-0.3,0.7-0.5,1.1-0.5c1,0,1.7,0.8,1.7,1.7
+            c0,0.5-0.2,0.9-0.6,1.3C178.1,27.9,175.1,29.5,170.6,29.5 M178.5,14c-0.4-4.9-3.2-9.1-8.5-9.1c-4.6,0-8.1,3.9-8.6,9.1H178.5z"/>
+            <path id="path186" class="st0" d="M113.7,21.1V21c0-5.7,4.7-8.7,11.5-8.7c3.5,0,5.9,0.5,8.3,1.2v-0.9c0-4.9-3-7.4-8.1-7.4
+            c-2.7,0-4.3,0.3-6.3,1.2c-0.3,0.1-0.5,0.2-0.7,0.2c-0.9,0-1.8-0.8-1.8-1.7c0-0.8,0.4-1.4,1.1-1.7c2.7-1.2,4.7-1.5,8.1-1.5
+            c3.8,0,6.7,1,8.7,3c1.8,1.8,2.8,4.4,2.8,7.9v14.9c0,1.1-0.8,2-1.9,2c-1.1,0-1.9-0.8-1.9-1.9v-2.6c-1.9,2.5-5,4.7-9.8,4.7
+            C118.8,29.5,113.7,26.6,113.7,21.1 M133.6,19v-2.6c-2-0.6-4.7-1.2-7.9-1.2c-5.1,0-7.9,2.2-7.9,5.6v0.1c0,3.4,3.1,5.4,6.8,5.4
+            C129.5,26.3,133.6,23.3,133.6,19"/>
+            <path id="path190" class="st0" d="M9.2,3.3C8.3,1.3,6.2,0.4,4.1,1.3c-2,0.9-2.8,3.2-1.9,5.1l8.6,18.6c1.3,2.9,2.8,4.5,5.4,4.5
+            c2.9,0,4.1-1.7,5.4-4.5c0,0,7.5-16.3,7.6-16.5c0.1-0.2,0.3-0.7,1.1-0.7c0.6,0,1.2,0.5,1.2,1.2v15.9c0,2.5,1.4,4.5,4,4.5
+            c2.6,0,4-2,4-4.5V12c0-2.5,1.8-4.1,4.3-4.1c2.5,0,4.1,1.7,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5c2.6,0,4-2,4-4.5V12c0-2.5,1.8-4.1,4.2-4.1
+            c2.5,0,4.1,1.7,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5c2.6,0,4-2,4-4.5V10.2c0-5.5-4.4-9.3-9.7-9.3C57.3,1,54,4.6,54,4.6
+            C52.3,2.4,49.8,1,45.8,1c-4.3,0-8.1,3.6-8.1,3.6C35.9,2.4,32.9,1,30.4,1c-3.8,0-6.9,1.7-8.7,5.9l-5.5,12.9L9.2,3.3z"/>
+            <path id="path194" class="st0" d="M182.8,4.9L182.8,4.9c0-1.8,1.5-3.4,3.3-3.4c1.9,0,3.3,1.5,3.3,3.3v0c0,1.8-1.5,3.4-3.3,3.4
+            C184.2,8.2,182.8,6.7,182.8,4.9 M188.8,4.8L188.8,4.8c0-1.5-1.2-2.7-2.7-2.7c-1.5,0-2.7,1.3-2.7,2.7v0c0,1.5,1.2,2.7,2.7,2.7
+            C187.6,7.6,188.8,6.3,188.8,4.8"/>
+            <path id="path198" class="st0" d="M184.8,3.5c0-0.2,0.2-0.4,0.4-0.4h1.1c0.4,0,0.7,0.1,0.9,0.3c0.2,0.2,0.3,0.4,0.3,0.7v0
+            c0,0.5-0.3,0.8-0.6,1l0.5,0.6c0.1,0.1,0.1,0.2,0.1,0.3c0,0.2-0.2,0.3-0.3,0.3c-0.2,0-0.3-0.1-0.4-0.2l-0.7-0.9h-0.6v0.7
+            c0,0.2-0.2,0.4-0.4,0.4c-0.2,0-0.4-0.2-0.4-0.4L184.8,3.5L184.8,3.5z M186.3,4.7c0.3,0,0.5-0.2,0.5-0.5v0c0-0.3-0.2-0.5-0.6-0.5
+            h-0.7v0.9L186.3,4.7L186.3,4.7z"/>
+          </svg>
+        </div>
+
+</div>
+</div>
+</div>
 </div>
