github buttons and footer for homepage

--- a/content/index.html
+++ b/content/index.html
@@ -18,21 +18,11 @@ cssid = "home"
           <a class="nats-colour-green-lite" href="https://github.com/nats-io">https://github.com/nats-io</a>
         </p>
         <div id="github-buttons">
-          <!-- Place this tag where you want the button to render. -->
-          <a class="github-button" href="https://github.com/nats-io/nats/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download ntkme/github-buttons on GitHub">Download</a>
-          <!-- Place this tag where you want the button to render. -->
-          <a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-eye" data-style="mega" data-count-href="/ntkme/github-buttons/watchers" data-count-api="/repos/ntkme/github-buttons#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a>
-
-          <!-- Place this tag where you want the button to render. -->
-          <a class="github-button" href="https://github.com/ntkme/github-buttons" data-icon="octicon-star" data-style="mega" data-count-href="/ntkme/github-buttons/stargazers" data-count-api="/repos/ntkme/github-buttons#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star ntkme/github-buttons on GitHub">Star</a>
-
-
-          <!-- Place this tag where you want the button to render. -->
-          <a class="github-button" href="https://github.com/ntkme/github-buttons/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/ntkme/github-buttons/network" data-count-api="/repos/ntkme/github-buttons#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork ntkme/github-buttons on GitHub">Fork</a>
-
-          <!-- Place this tag right after the last button or just before your close body tag. -->
+          <a class="github-button" href="https://github.com/nats-io/gnatsd/archive/master.zip" data-icon="octicon-cloud-download" data-style="mega" aria-label="Download nats-io/gnatsd on GitHub">Download</a>
+          <a class="github-button" href="https://github.com/nats-io/gnatsd" data-icon="octicon-star" data-style="mega" data-count-href="/nats-io/gnatsd/stargazers" data-count-api="/repos/nats-io/gnatsd#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star nats-io/gnatsd on GitHub">Star</a>
+          <a class="github-button" href="https://github.com/nats-io/gnatsd" data-icon="octicon-eye" data-style="mega" data-count-href="/nats-io/gnatsd/watchers" data-count-api="/repos/nats-io/gnatsd#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch nats-io/gnatsd on GitHub">Watch</a>
+          <a class="github-button" href="https://github.com/nats-io/gnatsd/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/nats-io/gnatsd/network" data-count-api="/repos/nats-io/gnatsd#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork nats-io/gnatsd on GitHub">Fork</a>
           <script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
-
         </div>
         <p class="bottom-info">
           NATS, is an open source, modern, secure, messaging system for distributed systems and scalable cloud applications, utilized for cloud native applications, IoT device messaging, and microservices architectures.<br><br>
@@ -190,8 +180,21 @@ cssid = "home"
             h-0.7v0.9L186.3,4.7L186.3,4.7z"/>
           </svg>
         </div>
+      </div>
 
 </div>
 </div>
 </div>
-</div>
+    <footer id="homepage-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 copyright">
+            <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
+            <p><a href="#licenseModal" data-toggle="modal" data-target="#licenseModal">View License</a></p>
+          </div>
+          <div class="col-xs-12 col-sm-3 col-sm-offset-5 supported">
+            <p><a href="http://apcera.com/" target="_blank"><img class="img-responsive" src="/img/powered-by-apcera.png" alt="Apcera"></a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
