--- a/content/index.html
+++ b/content/index.html
@@ -22,7 +22,7 @@ cssid = "home"
         </div>
         <p class="bottom-info">
           NATS, is an open source, modern, secure, messaging system for distributed systems and scalable cloud applications, utilized for cloud native applications, IoT device messaging, and microservices architectures.<br><br>
-          The Apcera team maintains The NATS server which is written in Go, Python, Ruby, Node.js, Elixir, Java, NGINX, C, and C# clients. The community has contributed a growing list of libraries, including Rust, Lua, PHP and many more. 
+          The Apcera team maintains the NATS server (written in Go) with clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C and C#. The community has contributed a growing list of libraries, including Rust, Lua, PHP and many more.
         </p>
         <div class="bottom-logo-container">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -38,7 +38,7 @@ cssid = "home"
             </g>
             <g>
               <g>
-                <polygon class="st0" points="14.9,36.6 53.5,36.6 53.5,47 28.5,47 28.5,56.2 52.4,56.2 52.4,67 28.5,67 28.5,76.4 53.9,76.4 
+                <polygon class="st0" points="14.9,36.6 53.5,36.6 53.5,47 28.5,47 28.5,56.2 52.4,56.2 52.4,67 28.5,67 28.5,76.4 53.9,76.4
                 53.9,87 14.9,87 14.9,36.6       "/>
               </g>
               <g>
@@ -57,7 +57,7 @@ cssid = "home"
                 c9.1,4.2,21.9,5.1,21.9-2.2c0-8-23.5-3.5-23.5-21.5C224.1,36.3,242.4,32.4,259,37.4L259,37.4z"/>
               </g>
               <g>
-                <polygon class="st0" points="322.2,36.6 339.6,36.6 356.1,69.1 356.1,36.6 368.8,36.6 368.8,87 352.4,87 334.9,53.9 334.9,87 
+                <polygon class="st0" points="322.2,36.6 339.6,36.6 356.1,69.1 356.1,36.6 368.8,36.6 368.8,87 352.4,87 334.9,53.9 334.9,87
                 322.2,87 322.2,36.6       "/>
               </g>
               <g>
@@ -134,13 +134,13 @@ cssid = "home"
       l-17.3-7.4c-6.4-2.9-11.1-6.4-14.2-10.5c-3.1-4.2-4.6-9-4.6-14.4c0-7.6,3.2-13.8,9.6-18.5c6.4-4.6,14.9-7,25.5-7
       c3.5,0,7.4,0.3,11.8,0.9C70.2,27.7,74.5,28.4,78.6,29.3z"/>
       <polygon class="st0" points="96.4,27.8 121.7,27.8 121.7,113 96.4,113  "/>
-      <polygon class="st0" points="203.2,27.8 203.2,43.5 165.6,43.5 165.6,62.4 198.2,62.4 198.2,76.6 165.6,76.6 165.6,96.4 204,96.4 
+      <polygon class="st0" points="203.2,27.8 203.2,43.5 165.6,43.5 165.6,62.4 198.2,62.4 198.2,76.6 165.6,76.6 165.6,96.4 204,96.4
       204,113 141.3,113 141.3,27.8  "/>
-      <polygon class="st0" points="321.3,27.8 321.3,113 297.7,113 297.7,56.8 273.2,113.7 258.6,113.7 235,56.8 235,113 218,113 
+      <polygon class="st0" points="321.3,27.8 321.3,113 297.7,113 297.7,56.8 273.2,113.7 258.6,113.7 235,56.8 235,113 218,113
       218,27.8 248.8,27.8 269.9,79.9 292,27.8   "/>
-      <polygon class="st0" points="402.8,27.8 402.8,43.5 365.4,43.5 365.4,62.4 398,62.4 398,76.6 365.4,76.6 365.4,96.4 403.6,96.4 
+      <polygon class="st0" points="402.8,27.8 402.8,43.5 365.4,43.5 365.4,62.4 398,62.4 398,76.6 365.4,76.6 365.4,96.4 403.6,96.4
       403.6,113 340.9,113 340.9,27.8  "/>
-      <polygon class="st0" points="491.6,27.8 491.6,113 464.8,113 434.6,58.3 434.6,113 417.6,113 417.6,27.8 445.2,27.8 474.5,81.5 
+      <polygon class="st0" points="491.6,27.8 491.6,113 464.8,113 434.6,58.3 434.6,113 417.6,113 417.6,27.8 445.2,27.8 474.5,81.5
       474.5,27.8  "/>
     </g>
   </svg>
@@ -176,95 +176,8 @@ cssid = "home"
   h-0.7v0.9L186.3,4.7L186.3,4.7z"/>
 </svg>
         </div>
-        <p class="bottom-info bottom-info-2">Companies like Vaidu, Siemens, VMware, HTC and Ericsson rely on the NATS enterprise messaging system for its highly performant and resilient capabilites.</p>
+        <p class="bottom-info bottom-info-2">Companies like Baidu, Siemens, VMware, HTC and Ericsson rely on the NATS enterprise messaging system for its highly performant and resilient capabilites.</p>
       </div>
     </div>
   </div>
 </div>
-<footer id="homepage-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 copyright">
-        <p>NATS is <a href="https://github.com/nats-io/gnatsd" target="_blank">open-source software</a>, as is <a href="https://github.com/nats-io/nats-site" target="_blank">this site</a>.</p>
-        <p><a href="#licenseModal" data-toggle="modal" data-target="#licenseModal">View License</a></p>
-      </div>
-      <div class="col-xs-12 col-sm-3 col-sm-offset-3 supported">
-        <p>
-          <a href="http://apcera.com/" target="_blank">
-            <svg id="dark-powered-by-apcera" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            viewBox="0 0 384.6 91.1" style="enable-background:new 0 0 384.6 91.1;" xml:space="preserve">
-            <g>
-              <g>
-                <g id="XMLID_1_">
-                  <path style="opacity:0.3;fill:#00E2AF;" d="M38.9,27.6c-4.2-4.1-10.9-4-15,0.2c-4.1,4.2-4,10.9,0.2,15l22,21.9l7.7-8.2
-                  c2.4-2.6,4.8-5,6.8-7.2C49.9,38.5,38.9,27.6,38.9,27.6z"/>
-                  <path style="opacity:0.3;fill:#00E2AF;" d="M11,50.9c-5.7,0.4-10.2,5.5-9.7,11.4S6.9,72.4,12.6,72c5.7-0.4,18.4-1.1,24.1-1.5
-                  s10.2-5.5,9.7-11.4S40.8,49,35.1,49.4S16.7,50.5,11,50.9z"/>
-                  <path style="opacity:0.3;fill:#00E2AF;" d="M66.6,68.8c-4.4,3.7-5,10.4-1.2,14.9c3.8,4.5,10.6,4.9,14.9,1.2
-                  c4.3-3.7,11.6-9.8,16-13.6c4.4-3.7,5-10.4,1.2-14.9S87,51.5,82.6,55.2S71,65.1,66.6,68.8z"/>
-                  <path style="fill:#1E86E5;" d="M29.1,45.3c-5.2-2.3-11.6,0-14,5.4s0.1,11.6,5.4,14S64,84.1,69.2,86.5s11.6,0,14-5.4
-                  c2.4-5.3-0.1-11.6-5.4-14C72.6,64.8,34.3,47.6,29.1,45.3z"/>
-                  <path style="fill:#1E86E5;" d="M12.4,69.4c-3.9,4.2-3.8,10.9,0.4,14.9c4.2,4,11,3.7,14.9-0.4c3.9-4.1,36.2-38.3,40.1-42.5
-                  s3.8-10.9-0.4-14.9c-4.2-4-11-3.8-14.9,0.4S16.3,65.3,12.4,69.4z"/>
-                  <path style="fill:#00E2AF;" d="M67.5,26.5c-4.2-4-11-3.8-14.9,0.4c-1.9,2-10.4,11-19.1,20.2c4.9,2.2,12.7,5.7,20.4,9.2
-                  c6.7-7.1,12.5-13.3,14.1-14.9C71.9,37.3,71.7,30.5,67.5,26.5z"/>
-                  <path style="fill:#00C0AF;" d="M33.4,47.2c4.9,2.2,12.7,5.7,20.4,9.2c-5.1,5.3-10.6,11.3-15.4,16.3c-8.5-3.8-15.9-7.1-18-8.1
-                  c-0.8-0.4-1.5-0.8-2.2-1.3L33.4,47.2z"/>
-                  <path style="fill:#1E86E5;" d="M63.2,79.2c1.5,6,7.3,9.1,12.7,7.9c5.7-1.3,9.3-6.9,7.9-12.7c-0.4-1.6-8.6-38.2-8.6-38.2
-                  c-1.3-5.7-7-9.2-12.7-7.9s-9.2,7-7.9,12.7L63.2,79.2z"/>
-                  <path style="fill:#00C0AF;" d="M69.5,29c-2.1-1-4.6-1.3-7-0.8c-5.7,1.3-9.2,7-7.9,12.7l2.7,11.8c5.2-5.5,9.4-10,10.7-11.3
-                  C71.1,38.1,71.7,33,69.5,29z"/>
-                  <path style="fill:#00E2AF;" d="M84.1,76.8c0.1,5.9-4.6,10.6-10.6,10.6c-5.2,0-9.3-3.5-10.5-8.7c-0.1-0.6-4.5-20.2-4.5-20.2
-                  s17.7,8,19,8.5C81.3,68.5,84.1,72.3,84.1,76.8z"/>
-                </g>
-                <g>
-                  <g>
-                    <path style="fill:#FFFFFF;" d="M144.5,75.7l-3.8-9.3h-17.5l-3.8,9.3h-9.3L127.9,34h8.4L154,75.7H144.5z M132,44.9l-5.5,13.4h11
-                    L132,44.9z"/>
-                    <path style="fill:#FFFFFF;" d="M180,63.3h-6.9v12.4H164V34.3h16.9c9.9,0,15.8,5.8,15.8,14.3v0.1C196.7,58.3,189.2,63.3,180,63.3
-                    z M187.5,48.8c0-4.1-2.8-6.3-7.4-6.3h-7v12.6h7.2c4.5,0,7.2-2.7,7.2-6.3V48.8z"/>
-                    <path style="fill:#FFFFFF;" d="M226.4,76.4c-12.2,0-21.2-9.4-21.2-21.3V55c0-11.8,8.9-21.4,21.6-21.4c7.8,0,12.5,2.6,16.3,6.4
-                    l-5.8,6.7c-3.2-2.9-6.4-4.7-10.6-4.7c-7,0-12,5.8-12,12.9V55c0,7.1,4.9,13,12,13c4.7,0,7.6-1.9,10.9-4.8l5.8,5.8
-                    C239.1,73.5,234.3,76.4,226.4,76.4z"/>
-                    <path style="fill:#FFFFFF;" d="M254.1,75.7V34.3h31.2v8.1h-22.2v8.4h19.5v8.1h-19.5v8.7h22.5v8.1H254.1z"/>
-                    <path style="fill:#FFFFFF;" d="M322.4,75.7l-8.9-13.2h-7.1v13.2h-9.1V34.3h18.9c9.7,0,15.6,5.1,15.6,13.6v0.1
-                    c0,6.7-3.6,10.9-8.9,12.8L333,75.7H322.4z M322.5,48.4c0-3.9-2.7-5.9-7.1-5.9h-9v11.9h9.2c4.4,0,7-2.4,7-5.8V48.4z"/>
-                    <path style="fill:#FFFFFF;" d="M374.3,75.7l-3.8-9.3H353l-3.8,9.3H340L357.7,34h8.4l17.7,41.7H374.3z M361.8,44.9l-5.5,13.4h11
-                    L361.8,44.9z"/>
-                  </g>
-                </g>
-              </g>
-              <g>
-                <g>
-                  <path style="fill:#00EFC1;" d="M114,14.4V19h-2.6V6.2h5.1c1.5,0,2.6,0.4,3.5,1.1s1.3,1.7,1.3,3s-0.4,2.2-1.3,3s-2,1.1-3.5,1.1
-                  H114z M114,12.4h2.5c0.7,0,1.3-0.2,1.6-0.6c0.4-0.4,0.6-0.9,0.6-1.5c0-0.6-0.2-1.1-0.5-1.5s-0.9-0.6-1.6-0.6H114V12.4z"/>
-                  <path style="fill:#00EFC1;" d="M138.9,13.8c0,1.6-0.5,2.9-1.5,3.9c-1,1-2.3,1.5-3.9,1.5c-1.6,0-2.9-0.5-3.8-1.5s-1.5-2.3-1.5-3.9
-                  v-2.3c0-1.6,0.5-2.9,1.5-3.9c1-1,2.3-1.5,3.8-1.5c1.6,0,2.9,0.5,3.9,1.5c1,1,1.5,2.3,1.5,3.9V13.8z M136.3,11.4
-                  c0-1-0.2-1.8-0.7-2.5s-1.2-1-2.1-1s-1.5,0.3-2,1c-0.5,0.6-0.7,1.5-0.7,2.5v2.3c0,1,0.2,1.8,0.7,2.5c0.5,0.6,1.2,1,2,1
-                  c0.9,0,1.6-0.3,2.1-1c0.5-0.6,0.7-1.5,0.7-2.5V11.4z"/>
-                  <path style="fill:#00EFC1;" d="M156.4,15L156.4,15l1.9-8.8h2.5l-3,12.8h-2.4l-2.3-8.4H153l-2.3,8.4h-2.4l-3-12.8h2.5l1.8,8.8
-                  l0.1,0l2.4-8.8h1.9L156.4,15z"/>
-                  <path style="fill:#00EFC1;" d="M175.5,13.4h-5.3V17h6.2v2h-8.8V6.2h8.7v2h-6.2v3.2h5.3V13.4z"/>
-                  <path style="fill:#00EFC1;" d="M185.9,13.9V19h-2.6V6.2h4.8c1.5,0,2.6,0.3,3.4,1s1.2,1.6,1.2,2.8c0,0.7-0.2,1.2-0.5,1.7
-                  s-0.9,0.9-1.5,1.2c0.8,0.2,1.3,0.6,1.6,1.1s0.5,1.2,0.5,1.9v0.9c0,0.4,0,0.7,0.1,1.1c0.1,0.4,0.3,0.7,0.5,0.9V19h-2.6
-                  c-0.2-0.2-0.4-0.5-0.5-0.9s-0.1-0.9-0.1-1.2v-0.9c0-0.6-0.2-1.1-0.5-1.5c-0.3-0.4-0.8-0.5-1.5-0.5H185.9z M185.9,11.9h2.2
-                  c0.7,0,1.3-0.2,1.6-0.5c0.4-0.3,0.5-0.8,0.5-1.4c0-0.6-0.2-1.1-0.5-1.4c-0.4-0.3-0.9-0.5-1.6-0.5h-2.3V11.9z"/>
-                  <path style="fill:#00EFC1;" d="M208.5,13.4h-5.3V17h6.2v2h-8.8V6.2h8.7v2h-6.2v3.2h5.3V13.4z"/>
-                  <path style="fill:#00EFC1;" d="M216.4,19V6.2h4.4c1.6,0,2.9,0.5,3.9,1.5c1,1,1.5,2.3,1.5,3.8v2.1c0,1.6-0.5,2.9-1.5,3.8
-                  c-1,1-2.3,1.5-3.9,1.5H216.4z M218.9,8.2V17h1.7c0.9,0,1.6-0.3,2.2-0.9c0.5-0.6,0.8-1.4,0.8-2.4v-2.1c0-1-0.3-1.8-0.8-2.4
-                  c-0.5-0.6-1.2-0.9-2.2-0.9H218.9z"/>
-                  <path style="fill:#00EFC1;" d="M243.5,19V6.2h4.3c1.5,0,2.7,0.3,3.5,0.9s1.3,1.5,1.3,2.6c0,0.6-0.2,1.1-0.5,1.6
-                  c-0.3,0.5-0.8,0.8-1.4,1c0.8,0.2,1.3,0.5,1.7,1.1s0.6,1.2,0.6,1.9c0,1.2-0.4,2.2-1.2,2.8c-0.8,0.6-2,0.9-3.4,0.9H243.5z
-                  M246,11.6h1.8c0.7,0,1.2-0.1,1.6-0.4s0.6-0.7,0.6-1.2c0-0.6-0.2-1-0.6-1.3c-0.4-0.3-0.9-0.4-1.7-0.4H246V11.6z M246,13.3V17h2.4
-                  c0.7,0,1.2-0.1,1.6-0.4c0.4-0.3,0.5-0.7,0.5-1.3c0-0.6-0.2-1.1-0.5-1.4c-0.3-0.3-0.8-0.5-1.4-0.5H246z"/>
-                  <path style="fill:#00EFC1;" d="M263.7,12.1L263.7,12.1l2.8-5.9h2.8l-4.4,8.3V19h-2.6v-4.6l-4.3-8.2h2.8L263.7,12.1z"/>
-                </g>
-              </g>
-            </g>
-          </svg>
-          </a>
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
