Final draft of the new homepage

--- a/content/index.html
+++ b/content/index.html
@@ -12,30 +12,92 @@ cssid = "home"
           <img class="img-responsive" alt="Nats.io" src="/img/large-logo.png">
         </a>
         <h1><span class="nats-colour-blue-lite">Open Source.</span> <span class="nats-colour-green-dark">Performant.</span> <span class="nats-colour-blue-dark">Simple.</span> <span class="nats-colour-green-lite">Scalable.</span></h1>
-        <p class="lead">A central nervous system for modern, reliable,<br> and scalable cloud and distributed systems.</p>
+        <p class="lead">A central nervous system for modern, reliable<br> and scalable cloud and distributed systems.</p>
         <p class="extra-info">
           <a id="download-button" class="btn btn-lg" href="https://github.com/nats-io/gnatsd" target="_blank"><i class="fa fa-github"></i><span class="download-text">Get Started</span></a>
         </p>
-        <p class="bottom-info">NATS is an open source, modern and secure messaging system for distributed systems and scalable cloud applications. It's utilized for cloud native applications, IoT device messaging and microservices architectures.</p>
+        <p class="bottom-info">NATS is an open source, modern and secure messaging system for distributed systems and scalable cloud applications. NATS is ideal for cloud native applications, IoT device messaging and microservices architectures.</p>
         <p class="bottom-info">The Apcera team maintains the NATS server (written in Go) with clients written in Python, Ruby, Node.js, Elixir, Java, NGINX, C and C#. The community has contributed a growing list of libraries, including Rust, Lua, PHP and many more.</p>
         <div class="row" id="bottom-logo-container">
           <div class="col-xs-6 col-sm-15 ericsson">
-            <img src="/img/ericsson.svg" alt="Ericsson" />
+            <a target="_blank" href="http://www.ericsson.com/">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 476.08 95.47">
+                <title>Ericsson</title>
+                <g>
+                  <g>
+                    <path d="M417.1,37.78a9.52,9.52,0,1,1-6.5-17.9l52.7-19.3a9.52,9.52,0,1,1,6.5,17.9Z" fill="#fff"/>
+                    <path d="M417.1,66.28a9.52,9.52,0,1,1-6.5-17.9l52.7-19.3A9.52,9.52,0,1,1,469.8,47Z" fill="#fff"/>
+                    <path d="M417.1,94.88A9.52,9.52,0,1,1,410.6,77l52.7-19.3a9.52,9.52,0,1,1,6.5,17.9Z" fill="#fff"/>
+                  </g>
+                  <g>
+                    <polygon points="0 29.48 38.6 29.48 38.6 39.88 13.6 39.88 13.6 49.08 37.5 49.08 37.5 59.88 13.6 59.88 13.6 69.28 39 69.28 39 79.88 0 79.88 0 29.48" fill="#fff"/>
+                    <polygon points="98.5 29.48 112.2 29.48 112.2 79.88 98.5 79.88 98.5 29.48" fill="#fff"/>
+                    <path d="M162.3,31.08l-0.9,10.8c-11.1-6.4-28.1-4.4-28.4,12.5s17.5,19.3,28.8,13.6l0.7,11c-19.9,6.2-43.8-.1-43.6-24.6,0-24,24-30.7,43.4-23.3h0Z" fill="#fff"/>
+                    <path d="M202.7,30.28l-0.9,10.5c-6.9-3.8-20-3.9-20,2.1,0,8.9,23.4,2.5,23.4,21.4,0,18.7-22.3,18.9-36.7,14.5l1-11.1c9.1,4.2,21.9,5.1,21.9-2.2,0-8-23.5-3.5-23.5-21.5-0.1-14.8,18.2-18.7,34.8-13.7h0Z" fill="#fff"/>
+                    <path d="M244.1,30.28l-0.9,10.5c-6.9-3.8-20-3.9-20,2.1,0,8.9,23.4,2.5,23.4,21.4,0,18.7-22.3,18.9-36.7,14.5l1-11.1c9.1,4.2,21.9,5.1,21.9-2.2,0-8-23.5-3.5-23.5-21.5-0.1-14.8,18.2-18.7,34.8-13.7h0Z" fill="#fff"/>
+                    <polygon points="307.3 29.48 324.7 29.48 341.2 61.98 341.2 29.48 353.9 29.48 353.9 79.88 337.5 79.88 320 46.78 320 79.88 307.3 79.88 307.3 29.48" fill="#fff"/>
+                    <path d="M275.6,28.18c14.3,0,25.1,8.4,25.1,26.6,0,17.4-10.9,26.4-25.1,26.4s-25-8.7-25-26.4c0-18.2,10.8-26.6,25-26.6h0Zm-11,26.6c0,7.7,3.3,16.4,11,16.4s10.9-8.7,11-16.4c0.1-7-3.3-16.4-11-16.4s-11,8.7-11,16.4h0Z" fill="#fff"/>
+                    <path d="M61.7,50.68h7.5c3.4,0.1,6.4-2,6.4-5.7,0-3.3-2.7-5.6-6.2-5.6H61.7v11.3h0ZM48.5,29.48H73.2c6.7,0,16.1,2.9,16.1,13.4,0,6.7-3,10.5-8.8,12.2a7.9,7.9,0,0,1,4.6,5.1c0,0.1,7.1,19.7,7.2,19.7H77.6l-5.2-15.2a5.22,5.22,0,0,0-5-3.9c-2.1,0-5.5-.1-5.5,0v19H48.5V29.48h0Z" fill="#fff"/>
+                  </g>
+                </g>
+              </svg>
+            </a>
           </div>
           <div class="col-xs-6 col-sm-15 htc">
-            <img src="/img/htc.svg" alt="HTC" />
+            <a target="_blank" href="http://www.htc.com/us/">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 246.2 81.74">
+                <title>htc</title>
+                <path d="M225.7,69.1c-13,.1-25.4.2-28.8-0.1-7-.6-11.6-5.2-12.2-11.9a55.07,55.07,0,0,1,0-11.5c0.6-6.5,6.1-12.7,12.2-13,2.2-.1,8-0.1,18.6-0.1l30.7,0.1V19.8s-24.5,0-31.8-.1c-9.9,0-14.8-.1-18,0.1-6.9.3-12.7,2.7-17.2,7.3-4.3,4.3-6.8,11.2-7.2,18.2a89.5,89.5,0,0,0,0,11.6c0.7,7.5,3.1,13.4,7.2,17.5a25.64,25.64,0,0,0,17.2,7.3c5.2,0.1,49.8,0,49.8,0V69s-13.5,0-20.5.1" fill="#fff"/>
+                <path d="M87.1,20.5V33.2h30.3V81.4h12.8V33.2h30.3V20.5H87.1Z" fill="#fff"/>
+                <path d="M73.8,44.6a24.57,24.57,0,0,0-7.2-17.5c-4.9-5-12.4-7-17.2-7.3-4.2-.2-21-0.2-24.9,0-5.5.2-9.6,1.9-11.6,3.4h0V0H0V81.7H12.8s-0.3-33.4,0-37.1A12.88,12.88,0,0,1,24.5,32.5c5-.4,20.1-0.3,24.8,0C55.8,33,60.6,38,61,44.9c0.1,2.5,0,36.8,0,36.8H73.8V44.6" fill="#fff"/>
+              </svg>
+            </a>
           </div>
           <div class="col-xs-6 col-sm-15 baidu">
-            <img src="/img/baidu.svg" alt="Baidu" />
+            <a target="_blank" href="http://www.baidu.com/">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 221.8 71.25">
+                <title>Baidu</title>
+                <path d="M92.9,24.6c-0.4-3.1-4.1-8.6-9-8.2-6.3.6-7.3,9.6-7.3,9.6-0.8,4.2,2,13.2,9.8,11.5S93.1,26.6,92.9,24.6ZM100.8,0c-4.3,0-7.7,4.9-7.7,11s3.5,11,7.7,11,7.7-4.9,7.7-11S105.1,0,100.8,0Zm21.6,1.8c-4.1-.9-9.1,5.6-9.6,9.8-0.6,5.2.7,10.4,6.5,11.1s9.4-5.4,10.1-10S126.4,2.7,122.4,1.8Zm19.5,28.7c0-2.2-1.8-8.9-8.7-8.9s-7.8,6.3-7.8,10.8c0,4.2.4,10.2,8.9,10S141.9,32.7,141.9,30.5ZM97.7,50.9a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm0,0a4.57,4.57,0,0,0-3.1,2.8,7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.9h4.1V51H97.7V50.9Zm35.6-1s-8.9-6.8-14-14.3c-7-10.9-17-6.5-20.3-.9s-8.5,9.1-9.2,10S79.1,51,81.3,60.8s10,9.6,10,9.6a42.67,42.67,0,0,0,12.4-.9,25.71,25.71,0,0,1,12.4.4s15.5,5.2,19.7-4.8S133.3,49.9,133.3,49.9ZM106.7,64.8H96.6c-4.3-.9-6.1-3.8-6.3-4.4a11.47,11.47,0,0,1-.8-7,8.75,8.75,0,0,1,7.2-6.5h5.4V40.3l4.6,0.1V64.8Zm18.8-.1H113.9c-4.5-1.2-4.7-4.4-4.7-4.4V47.6l4.7-.1V59a2.42,2.42,0,0,0,1.8,1.5h4.8V47.6h5V64.7ZM94.6,53.6a7.3,7.3,0,0,0-.3,3.8A4.42,4.42,0,0,0,98,60.8h4.1V50.9H97.8A5,5,0,0,0,94.6,53.6Z" fill="#fff"/>
+                <path d="M180.7,39.1V33.7H145.1v5.5h15.3L159,42.5H146V69.6h30.9c3.2,0,2.9-3.3,2.9-3.3V42.5h-13l1.1-3.4h12.8Zm-6.9,24.7a1.53,1.53,0,0,1-.9.9H152.4V58.4h21.4v5.4h0Zm0-10.6H152.4v-6h21.4v6h0Z" fill="#fff"/>
+                <path d="M221.4,33.9h-14V31.2h-6.6v2.6h-16V69.6h5.8V38.4h30.8V33.9Zm-3.7,7.4V39.2h-5.6v2.1H200.5v-2h-5.3v2h-3.6l0.1,4.1h3.5V53h19.4c2.7,0,3.1-2.9,3.1-2.9V45.3h4.1V41.2l-4.1.1h0ZM212,48.1a1.75,1.75,0,0,1-1.1.9H200.4V45.2H212v2.9h0ZM192.3,58.5l9,5.2c-0.7.8-3.8,1.8-3.8,1.8h-6v4h8.1a39.7,39.7,0,0,0,6.9-2.8,13.65,13.65,0,0,0,5.4,2.4h9.3v-4h-7a10.64,10.64,0,0,1-3.6-1.4l10.6-6.1V54.3H192.3v4.2h0Zm18.6,0-5.1,2.7-4.7-2.7h9.8Z" fill="#fff"/>
+                <path d="M65.9,39.6h7.8V32.8H65.9v6.8Zm0,29.8h7.8V42.6H65.9V69.4Z" fill="#fff"/>
+                <path d="M53.2,42.6H36.6v5.6H51.1s3.5,0.9,3.5,3v2H41.5s-5.2.5-6.8,6.7a10.43,10.43,0,0,0,.3,4.8,8.32,8.32,0,0,0,6.2,4.8h21V50.3a10.19,10.19,0,0,0-9-7.7h0Zm1.5,21.6H44.1a3.49,3.49,0,0,1-2-1.8,2.38,2.38,0,0,1,0-1.9,3.79,3.79,0,0,1,2.3-2H54.8v5.7H54.7Z" fill="#fff"/>
+                <path d="M33,60a9.34,9.34,0,0,0-5.6-8.8c5-2.6,4.3-9.1,4.3-9.1-0.5-10-12.8-9.6-12.8-9.6H0V69.8H21.4C33.9,69.8,33,60,33,60h0ZM20.9,62.9H8.1V54.8H20.8l0.4,0.1a4.62,4.62,0,0,1,3.3,2.6,4.89,4.89,0,0,1-.6,3.6c0.1,0-.7,1.5-3,1.8h0Zm2.7-17.3a4.3,4.3,0,0,1-3.1,1.9H8.1V39.8H20.4s2.7-.1,3.6,2a6.13,6.13,0,0,1-.4,3.8h0Z" fill="#fff"/>
+              </svg>
+            </a>
           </div>
           <div class="col-xs-6 col-sm-15 siemens">
-            <img src="/img/siemens.svg" alt="Siemens" />
+            <a target="_blank" href="http://www.siemens.com/entry/cc/en/">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 554.7 88.3">
+                <title>Siemens</title>
+                <g>
+                  <path d="M548.4,3.1V19.6c-8.6-3.2-16.2-4.9-22.9-4.9-4,0-7.1.7-9.5,2.1s-3.6,3.2-3.6,5.3c0,2.8,2.7,5.2,8,7.4l15.5,7.6c12.6,6,18.8,13.9,18.8,23.9a23.24,23.24,0,0,1-10,19.8c-6.6,5-15.5,7.4-26.6,7.4a115.49,115.49,0,0,1-13.8-.7,98.51,98.51,0,0,1-14-2.6V67.7c9.5,3.2,18.2,4.9,26.1,4.9,9.3,0,14-2.7,14-8.2,0-2.7-1.9-4.9-5.8-6.6l-17.3-7.4c-6.4-2.9-11.1-6.4-14.2-10.5a24.24,24.24,0,0,1-4.6-14.4c0-7.6,3.2-13.8,9.6-18.5S513,0,523.6,0a89.1,89.1,0,0,1,11.8.9c4.6,0.6,8.9,1.3,13,2.2h0Z" fill="#fff"/>
+                  <path d="M59.7,3.1V19.6c-8.6-3.2-16.2-4.8-22.9-4.8-4,0-7.1.7-9.5,2.1s-3.6,3.2-3.6,5.3c0,2.8,2.7,5.2,8.1,7.4l15.5,7.6c12.5,6,18.8,13.9,18.8,23.9a23.4,23.4,0,0,1-9.9,19.8c-6.7,5-15.5,7.4-26.7,7.4a115.49,115.49,0,0,1-13.8-.7A101.14,101.14,0,0,1,1.7,85V67.7c9.6,3.2,18.3,4.9,26.1,4.9,9.3,0,14-2.7,14-8.2q0-4-5.7-6.6L18.8,50.4C12.4,47.5,7.7,44,4.6,39.9A23.58,23.58,0,0,1,0,25.5C0,17.9,3.2,11.7,9.6,7S24.5,0,35.1,0A87.9,87.9,0,0,1,46.9.9C51.3,1.5,55.6,2.2,59.7,3.1Z" fill="#fff"/>
+                  <polygon points="77.5 1.6 102.8 1.6 102.8 86.8 77.5 86.8 77.5 1.6" fill="#fff"/>
+                  <polygon points="184.3 1.6 184.3 17.3 146.7 17.3 146.7 36.2 179.3 36.2 179.3 50.4 146.7 50.4 146.7 70.2 185.1 70.2 185.1 86.8 122.4 86.8 122.4 1.6 184.3 1.6" fill="#fff"/>
+                  <polygon points="302.4 1.6 302.4 86.8 278.8 86.8 278.8 30.6 254.3 87.5 239.7 87.5 216.1 30.6 216.1 86.8 199.1 86.8 199.1 1.6 229.9 1.6 251 53.7 273.1 1.6 302.4 1.6" fill="#fff"/>
+                  <polygon points="383.9 1.6 383.9 17.3 346.5 17.3 346.5 36.2 379.1 36.2 379.1 50.4 346.5 50.4 346.5 70.2 384.7 70.2 384.7 86.8 322 86.8 322 1.6 383.9 1.6" fill="#fff"/>
+                  <polygon points="472.7 1.6 472.7 86.8 445.9 86.8 415.7 32.1 415.7 86.8 398.7 86.8 398.7 1.6 426.3 1.6 455.6 55.3 455.6 1.6 472.7 1.6" fill="#fff"/>
+                </g>
+              </svg>
+            </a>
           </div>
           <div class="col-xs-6 col-sm-15 vmware">
-            <img src="/img/vmware.svg" alt="vmware" />
+            <a target="_blank" href="http://www.vmware.com/">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 187.57 28.8">
+                <title>vmware</title>
+                <path d="M80.57,26.6L72.37,3.7a3.59,3.59,0,0,1-.2-1.1,1.92,1.92,0,0,1,2-1.9,2.12,2.12,0,0,1,2,1.7L83,22.1l6.9-19.8a2,2,0,0,1,2-1.6h0.2a2.16,2.16,0,0,1,2.1,1.6L101,22.1l6.9-19.8a2,2,0,0,1,1.9-1.6,1.92,1.92,0,0,1,2,1.9,3.54,3.54,0,0,1-.3,1.1l-8.3,22.9a2.38,2.38,0,0,1-2.2,1.8h-0.2a2.29,2.29,0,0,1-2.2-1.8L92,7.1l-6.8,19.5A2.29,2.29,0,0,1,83,28.4h-0.1a2.49,2.49,0,0,1-2.3-1.8" fill="#fff"/>
+                <path d="M140.47,2.6a2,2,0,0,1,2-2,1.94,1.94,0,0,1,2,2V7.2a11,11,0,0,1,9.3-6.6,1.94,1.94,0,0,1,2,2,1.9,1.9,0,0,1-1.8,2c-5.2.6-9.5,4.6-9.5,12.4v9.2a2,2,0,0,1-4,0V2.6h0Z" fill="#fff"/>
+                <path d="M168.77,28.6c-7.3,0-13.3-5.7-13.3-14V14.5c0-7.7,5.4-14,12.7-14,7.9,0,12.3,6.5,12.3,13.6a1.9,1.9,0,0,1-1.9,1.9h-19.2c0.6,5.8,4.6,9.1,9.3,9.1a10.61,10.61,0,0,0,7.6-3.1,1.61,1.61,0,0,1,1.1-.5,1.69,1.69,0,0,1,1.7,1.7,1.76,1.76,0,0,1-.6,1.3,12.09,12.09,0,0,1-9.7,4.1m7.9-15.5c-0.4-4.9-3.2-9.1-8.5-9.1-4.6,0-8.1,3.9-8.6,9.1h17.1Z" fill="#fff"/>
+                <path d="M111.87,20.2V20.1c0-5.7,4.7-8.7,11.5-8.7a27.52,27.52,0,0,1,8.3,1.2V11.7c0-4.9-3-7.4-8.1-7.4a13.65,13.65,0,0,0-6.3,1.2,2.54,2.54,0,0,1-.7.2,1.84,1.84,0,0,1-1.8-1.7,1.75,1.75,0,0,1,1.1-1.7A17.52,17.52,0,0,1,124,.8q5.7,0,8.7,3c1.8,1.8,2.8,4.4,2.8,7.9V26.6a1.92,1.92,0,0,1-1.9,2,1.84,1.84,0,0,1-1.9-1.9V24.1a11.77,11.77,0,0,1-9.8,4.7c-4.9-.2-10-3.1-10-8.6m19.9-2.1V15.5a27.38,27.38,0,0,0-7.9-1.2c-5.1,0-7.9,2.2-7.9,5.6V20c0,3.4,3.1,5.4,6.8,5.4,4.9,0,9-3,9-7.3" fill="#fff"/>
+                <path d="M7.37,2.4a3.78,3.78,0,0,0-5.1-2A3.79,3.79,0,0,0,.37,5.5L9,24.1c1.3,2.9,2.8,4.5,5.4,4.5,2.9,0,4.1-1.7,5.4-4.5,0,0,7.5-16.3,7.6-16.5a1.08,1.08,0,0,1,1.1-.7,1.22,1.22,0,0,1,1.2,1.2V24c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V11.1A4,4,0,0,1,42,7a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5v-13A4,4,0,0,1,58.27,7a3.88,3.88,0,0,1,4.1,4.1v13c0,2.5,1.4,4.5,4,4.5s4-2,4-4.5V9.3c0-5.5-4.4-9.3-9.7-9.3a12.76,12.76,0,0,0-8.5,3.7C50.47,1.5,48,.1,44,0.1c-4.3,0-8.1,3.6-8.1,3.6A10.09,10.09,0,0,0,28.57.1c-3.8,0-6.9,1.7-8.7,5.9l-5.5,12.9Z" fill="#fff"/>
+                <path d="M181,4h0a3.42,3.42,0,0,1,3.3-3.4,3.27,3.27,0,0,1,3.3,3.3h0a3.42,3.42,0,0,1-3.3,3.4A3.27,3.27,0,0,1,181,4m6-.1h0a2.69,2.69,0,0,0-2.7-2.7,2.75,2.75,0,0,0-2.7,2.7h0a2.69,2.69,0,0,0,2.7,2.7A2.63,2.63,0,0,0,187,3.9" fill="#fff"/>
+                <path d="M183,2.6a0.43,0.43,0,0,1,.4-0.4h1.1a1.22,1.22,0,0,1,.9.3,0.91,0.91,0,0,1,.3.7h0a1.17,1.17,0,0,1-.6,1l0.5,0.6a0.37,0.37,0,0,1,.1.3,0.32,0.32,0,0,1-.3.3,0.52,0.52,0,0,1-.4-0.2l-0.7-.9h-0.6V5a0.4,0.4,0,1,1-.8,0L183,2.6h0Zm1.5,1.2a0.47,0.47,0,0,0,.5-0.5h0a0.51,0.51,0,0,0-.6-0.5h-0.7V3.7l0.8,0.1h0Z" fill="#fff"/>
+              </svg>
+            </a>
           </div>
         </div>
-        <p class="bottom-info">Companies like Baidu, Siemens, VMware, HTC and Ericsson rely on the NATS enterprise messaging system for its highly performant and resilient capabilites.</p>
+        <p class="bottom-info">Companies like Ericsson, HTC, Baidu, Siemens and VMware rely on the NATS enterprise messaging system for its highly performant and resilient capabilites.</p>
       </div>
     </div>
   </div>
