Added some projects to the Community Page

--- a/content/community.html
+++ b/content/community.html
@@ -75,6 +75,10 @@ type = "community"
       <td>Apcera's Platform uses NATS as the secure control plane</td>
     </tr>
     <tr>
+      <td><a href="https://github.com/joshglendenning/arduino-nats/" target="_blank">Arduino NATS</a></td>
+      <td>An Arduino / Spark Core / Particle Photon compatible C++ library for communicating with a NATS server.</td>
+    </tr>
+    <tr>
       <td><a href="https://github.com/dankomiocevic/aws-nats" target="_blank">AWS NATS</a></td>
       <td>This repository contains tools and templates to help using NATS in the Amazon Web Services platform.</td>
     </tr>
@@ -103,12 +107,22 @@ type = "community"
       <td>NATS plugin for the Fluentd Event Collector</td>
     </tr>
     <tr>
+      <td><a href="https://github.com/fluent/fluent-bit/blob/master/documentation/output/nats.md" target="_blank">FluentBit</a></td>
+      <td>The NATS output plugin allows you to flush your records into a NATS Server end-point.</td>
+    </tr>
+    <tr>
       <td><a href="https://github.com/micro/go-micro" target="_blank">Go-Micro</a></td>
       <td>A pluggable RPC microservice library in Go</td>
     </tr>
     <tr>
       <td><a href="https://github.com/influxdata/telegraf/tree/8d0f50a6fd10cea1af84ccfdc2beeb1a61dd19bd/plugins/inputs/nats_consumer" target="_blank">InfluxData</a></td>
       <td>The NATS consumer plugin reads from specified NATS subjects and adds messages to InfluxDB. The plugin expects messages in the Telegraf Input Data Formats. A Queue Group is used when subscribing to subjects so multiple instances of telegraf can read from a NATS cluster in parallel.</td>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/trillium-labs/logrus-nats" target="_blank">Logrus-NATS</a></td>
+      <td>A Logrus hook for sending data to NATS.</td>
     </tr>
     <tr>
       <td><a href="https://github.com/pires/nats-coreos-cluster" target="_blank">NATS Clustering</a></td>
