adds navigation, home page tweaks, and replaces font awesome

--- a/content/community.html
+++ b/content/community.html
@@ -48,9 +48,9 @@ type = "community"
   <div class="col-md-4" id="social-con">
     <h2>Social</h2>
     <ul class="social-list list-inline">
-      <li><a target="_blank" href="https://twitter.com/nats_io"><img alt="twitter" src="/img/social/twitter.png"/></a></li>
-      <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><img alt="Google Groups" src="/img/social/google.png"/></a></li>
-      <li><a target="_blank" href="https://github.com/nats-io"><img alt="github" src="/img/social/github.png"/></a></li>
+      <li><a target="_blank" href="https://twitter.com/nats_io"><i class="icon-twitter"></i></a></li>
+      <li><a target="_blank" href="https://groups.google.com/forum/#!forum/natsio"><i class="icon-google-plus"></i></a></li>
+      <li><a target="_blank" href="https://github.com/nats-io"><i class="icon-mark-github"></i></a></li>
       <li><a target="_blank" href="https://docs.google.com/a/apcera.com/forms/d/104yA7oqq7SPoMDG_J9MnVE74gVwBnTmVHKP5ABHoM5k/viewform?embedded=true"><img alt="Slack" src="/img/social/slack.png"/></a></li>
     </ul>
   </div>
